<resources>
    <string name="app_name">SampleDemo</string>
    <string name="profile">Profile</string>
    <string name="items">Items</string>
    <string name="favorites">Favorites</string>
    <string name="table">Table</string>
    <string name="setting">Settings</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_hobby">Hobby</string>
    <string name="hint_do_joining">Date of joining</string>
    <string name="camera_msg">We need to access your phone\'s camera and storage to take picture</string>
    <string name="gallery_msg">We need to access your phone\'s storage to take picture</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="please_choose">Please choose:</string>
    <string name="all">All</string>
    <string name="category_a">Category A</string>
    <string name="category_b">Category B</string>
    <string name="tables">Tables</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="selected">%1d Selected</string>
    <string name="delete">Delete</string>
    <string name="temperature_display_units">Temperature Display Units</string>
    <string name="farenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="sound">Sound</string>
    <string name="notifications">Notifications</string>
    <string name="date_probation_ends">Date probation ends</string>
    <string name="view_details">View Details</string>
    <string name="temperature">Temperature</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="date_of_probation_ends">Date of probation ends</string>
    <string name="probation_duration">Probation Duration</string>
    <string name="date_becomes_permanent">Date becomes permanent</string>
    <string name="probation_length">Probation length</string>
    <string name="save">Save</string>
    <string name="more_than_6_months">More than 6 months</string>
    <string name="months_days">%1d Months %2d Days</string>
    <string name="you_don_t_have_any_favorite_item">You don\'t have any favorite item</string>
</resources>
