<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_user_icon_inactive"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_items"
        android:enabled="true"
        android:icon="@drawable/ic_user_icon_inactive"
        android:title="@string/items"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_user_icon_inactive"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_table"
        android:enabled="true"
        android:icon="@drawable/ic_user_icon_inactive"
        android:title="@string/table"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@drawable/ic_user_icon_inactive"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />
</menu>