<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/white"/>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/txtFarenheit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@android:color/black"
        android:text="@string/farenheit"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        tools:ignore="RtlSymmetry" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>
    <TextView
        android:id="@+id/txtCelcius"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@android:color/black"
        android:text="@string/celsius"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        tools:ignore="RtlSymmetry" />
</LinearLayout>