<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:layout_alignParentTop="true">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_gravity="start|center_vertical"
                android:id="@+id/toolbar_edit"
                android:textColor="@android:color/white"
                android:gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tables"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"/>
            <ImageView
                android:id="@+id/imgAdd"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_baseline_add_24px"
                android:layout_gravity="end|center_vertical"
                android:tint="@android:color/white"
                android:padding="8dp"/>
        </androidx.appcompat.widget.Toolbar>
        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:layout_below="@id/toolbar"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            tools:ignore="Autofill" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/edtSearch"
            android:layout_above="@id/btnDelete"/>
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/delete"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:visibility="gone"/>
</RelativeLayout>