<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/white"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rlvTemperature"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@android:color/white">
                <TextView
                    android:id="@+id/temperature_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/temperature_display_units"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/txtTemperatureUnit"
                    android:layout_toEndOf="@id/temperature_label"
                    android:layout_toRightOf="@id/temperature_label"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/farenheit"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="@android:color/darker_gray"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/sound_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/sound"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColor="@android:color/black"/>
            <Switch
                android:id="@+id/swtSound"
                android:layout_toEndOf="@id/sound_label"
                android:layout_toRightOf="@id/sound_label"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/notifications_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/notifications"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColor="@android:color/black"/>
            <Switch
                android:id="@+id/swtNotification"
                android:layout_toEndOf="@id/notifications_label"
                android:layout_toRightOf="@id/notifications_label"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/date_probation_ends"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_toEndOf="@id/date_label"
                android:layout_toRightOf="@id/date_label"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@android:color/darker_gray"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="50dp"/>
        <TextView
            android:id="@+id/txtViewDetails"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@android:color/black"
            android:text="@string/view_details"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:gravity="center_vertical"
            android:background="@android:color/white"
            tools:ignore="RtlSymmetry" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>
    </LinearLayout>
</LinearLayout>